major improvements for skills and vscode extension
